--- a/assets/main.scss
+++ b/assets/main.scss
@@ -67,9 +67,11 @@ html.dark {
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 12px;
   margin-bottom: 4em;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .cv {
