--- a/layouts/partials/misc.html
+++ b/layouts/partials/misc.html
@@ -1,3 +1,4 @@
+{{ with . }}
 <div class="cv-misc">
   {{ if gt (len .) 0 }}
     <h2 class="cv-sidebar-heading">
@@ -19,3 +20,4 @@
     </ul>
   {{ end }}
 </div>
+{{ end }}
