--- a/layouts/partials/toolbar.html
+++ b/layouts/partials/toolbar.html
@@ -33,7 +33,7 @@
   {{ end }}
   <div style="flex-grow: 1;"></div>
   <a
-    href="https://github.com/diogotcorreia/cv"
+    href="https://github.com/hkkcngz/cv"
     target="_blank"
     rel="noopener noreferrer"
   >
